<resources>
    <string name="app_name">Fast as Light</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="profile_id">Profile ID</string>
    <string name="high_score">High Score</string>
    <string name="rank">Rank</string>
    <string name="exit_profile_page_and_return_to_home_menu">Exit Profile page and return to Home Menu</string>
    <string name="change_character">CHANGE CHARACTER</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="view_profile">View profile</string>
    <string name="game_title_logo">Game title logo</string>
    <string name="start_a_playthrough">Start a playthrough</string>
    <string name="open_online_leaderboard">Open online leaderboard</string>
    <string name="settings">Settings</string>
    <string name="todo4">TODO</string>
    <string name="rank_txt">Rank</string>
    <string name="high_score_txt">High Score</string>
    <string name="exit_change_character_page_and_return_to_profile_page">Exit change character page and return to profile page</string>
    <string name="choose_character">CHOOSE CHARACTER</string>
    <string name="blue_player_choose_option">Blue player choose option</string>
    <string name="choose_character_change">CHOOSE CHARACTER</string>
    <string name="open_change_character_page">open change character page</string>
    <string name="exit_leaderboard_page_and_return_to_home_menu">Exit leaderboard page and return to home menu</string>
    <string name="enter_user_email">Enter User Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_you_have_a_profile">Do you have a profile?</string>
    <string name="go_to_login_page">Go to login page</string>
    <string name="go_to_setup_page">Go to setup page</string>
    <string name="todo3">TODO</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password2">Enter Password</string>
    <string name="enter_user_name2">Enter User Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email2">Enter Email</string>
    <string name="enter_password3">Enter Password</string>
    <string name="emaill">Email</string>
    <string name="passwordl">Password</string>
    <string name="submitl">SUBMIT</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">Sign Up</string>
    <string name="signup2">Settings</string>
    <string name="btn_forget_password">Forgot Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="hint_email">Enter Email</string>
    <string name="action_sign_in_short">Email Invalid</string>
    <string name="prompt_password">Enter Password</string>
    <string name="btn_link_to_login">Submit</string>
    <string name="password">Enter Password</string>
    <string name="password50">New username</string>
    <string name="confirm_password">Conform Password</string>
    <string name="signed">Submit</string>
    <string name="already_have_an_account_login">Already have an account</string>
</resources>